# COC

./: .gitignore  CMakeLists.txt  README.md
includes/: Config.h  ConverterTyptData.h  ErrorTest.h  MainWindow.h
includes/COC/: Config.h  ConverterTyptData.h  ErrorTest.h  MainWindow.h
src/: Config.cpp  ConverterTypeData.cpp  MainWindow.cpp
